[gd_scene load_steps=16 format=2]

[ext_resource path="res://Paddle/Paddle.tscn" type="PackedScene" id=1]
[ext_resource path="res://DynamicBG/DynamicBG.tscn" type="PackedScene" id=2]
[ext_resource path="res://Wall/Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://Score/ScoreDisplay.tscn" type="PackedScene" id=4]
[ext_resource path="res://BallDetector/BallDetector.tscn" type="PackedScene" id=5]
[ext_resource path="res://Main/Main.gd" type="Script" id=6]
[ext_resource path="res://sounds/life_lost.wav" type="AudioStream" id=7]
[ext_resource path="res://Main/heart.png" type="Texture" id=8]
[ext_resource path="res://sounds/game_over.wav" type="AudioStream" id=9]
[ext_resource path="res://BallSpawner/BallSpawner.tscn" type="PackedScene" id=10]
[ext_resource path="res://CollectibleSpawner/CollectibleSpawner.tscn" type="PackedScene" id=11]
[ext_resource path="res://Main/curtain.png" type="Texture" id=12]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 320 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 240, 10 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 240, 40 )

[node name="Main" type="Node2D" groups=[
"main",
]]
script = ExtResource( 6 )

[node name="DynamicBG" parent="." instance=ExtResource( 2 )]
position = Vector2( 0, 3 )

[node name="Paddle" parent="." instance=ExtResource( 1 )]
position = Vector2( 120, 275 )

[node name="BallSpawner" parent="." instance=ExtResource( 10 )]
position = Vector2( 120, 110 )

[node name="Left Wall" parent="." instance=ExtResource( 3 )]
position = Vector2( -10, 320 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Left Wall"]
shape = SubResource( 1 )

[node name="Right Wall" parent="." instance=ExtResource( 3 )]
position = Vector2( 250, 320 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Right Wall"]
shape = SubResource( 1 )

[node name="Top Wall" parent="." instance=ExtResource( 3 )]
position = Vector2( 240, -10 )
normal = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top Wall"]
shape = SubResource( 2 )

[node name="ScoreDisplay" parent="." instance=ExtResource( 4 )]
position = Vector2( 40, 299 )

[node name="BallDetector" parent="." instance=ExtResource( 5 )]
position = Vector2( 240, 360 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BallDetector"]
position = Vector2( -0.833618, 0 )
shape = SubResource( 3 )

[node name="CollectibleSpawner" parent="." instance=ExtResource( 11 )]
position = Vector2( 120, 50 )
extent = Vector2( 80, 10 )
collectible_node_path = NodePath("../Collectibles")

[node name="Collectibles" type="Node2D" parent="."]

[node name="Hearts" type="Node2D" parent="."]

[node name="Heart1" type="Sprite" parent="Hearts"]
position = Vector2( 215, 300 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )
offset = Vector2( 0.412231, -3.64807 )

[node name="Heart2" type="Sprite" parent="Hearts"]
position = Vector2( 190, 300 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )
offset = Vector2( 0.412231, -3.64807 )

[node name="Heart3" type="Sprite" parent="Hearts"]
position = Vector2( 165, 300 )
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 8 )
offset = Vector2( 0.412231, -3.64807 )

[node name="LifeLostSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -30.0

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -30.0

[node name="Curtain" type="Sprite" parent="."]
position = Vector2( 120.573, -200 )
rotation = 3.14159
texture = ExtResource( 12 )

[node name="CurtainTween" type="Tween" parent="."]

[node name="InvincibilityTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
